{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 151,
  "lineage": "1f6a4e42-aa15-8ba6-cd8d-e7c5b729e06c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06239835d0bf57e0b",
            "arn": "arn:aws:ec2:us-east-1:529088298985:elastic-ip/eipalloc-06239835d0bf57e0b",
            "domain": "vpc",
            "id": "eipalloc-06239835d0bf57e0b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-214-250-221.compute-1.amazonaws.com",
            "public_ip": "44.214.250.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Dev-nat"
            },
            "tags_all": {
              "Name": "Dev-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7620d611d3ceae4",
            "arn": "arn:aws:ec2:us-east-1:529088298985:instance/i-0589a66c9a72dd3a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0589a66c9a72dd3a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-cluster",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aed8c0678099606c",
            "private_dns": "ip-10-0-78-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.78.194",
            "public_dns": "ec2-3-90-13-136.compute-1.amazonaws.com",
            "public_ip": "3.90.13.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-060dbb57dc012fa88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf0e4f7ece93b40a",
            "tags": {
              "Name": "Dev-Web Server"
            },
            "tags_all": {
              "Name": "Dev-Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eff5b82a51f1ecaa"
            ]
          },
          "dependencies": [
            "aws_security_group.jumpbox_sg",
            "aws_subnet.public_zone1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_ami",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:internet-gateway/igw-0db9bde50b8d6c4a5",
            "id": "igw-0db9bde50b8d6c4a5",
            "owner_id": "529088298985",
            "tags": {
              "Name": "Dev--igw"
            },
            "tags_all": {
              "Name": "Dev--igw"
            },
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06239835d0bf57e0b",
            "association_id": "eipassoc-0b57559cc3abe74d9",
            "connectivity_type": "public",
            "id": "nat-07d48a5b872de902e",
            "network_interface_id": "eni-04e9887379a56d208",
            "private_ip": "10.0.87.233",
            "public_ip": "44.214.250.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf0e4f7ece93b40a",
            "tags": {
              "Name": "Dev-nat"
            },
            "tags_all": {
              "Name": "Dev-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:route-table/rtb-0b823ca10e543a726",
            "id": "rtb-0b823ca10e543a726",
            "owner_id": "529088298985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d48a5b872de902e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-private"
            },
            "tags_all": {
              "Name": "Dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:route-table/rtb-0a3d5204c7d0e31c0",
            "id": "rtb-0a3d5204c7d0e31c0",
            "owner_id": "529088298985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db9bde50b8d6c4a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-public"
            },
            "tags_all": {
              "Name": "Dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ef4a2cd0998cc07",
            "route_table_id": "rtb-0b823ca10e543a726",
            "subnet_id": "subnet-04a6e9906211064e6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074af94068c41d629",
            "route_table_id": "rtb-0b823ca10e543a726",
            "subnet_id": "subnet-0c126c5dd56ee54a2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095f9f5c5ad575f4b",
            "route_table_id": "rtb-0a3d5204c7d0e31c0",
            "subnet_id": "subnet-0cf0e4f7ece93b40a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c22d0e567a3c69a",
            "route_table_id": "rtb-0a3d5204c7d0e31c0",
            "subnet_id": "subnet-072b742265b0d5988"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:security-group/sg-064accc5ad8cb6968",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064accc5ad8cb6968",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow worker nodes to talk to control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "529088298985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:security-group/sg-06a774182a448c5ae",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a774182a448c5ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Jumpbox",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eff5b82a51f1ecaa"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane traffic",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064accc5ad8cb6968"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Node-to-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Dev-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "529088298985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nodes-sg"
            },
            "tags_all": {
              "Name": "eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.jumpbox_sg",
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpbox_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:security-group/sg-0eff5b82a51f1ecaa",
            "description": "Security group for Jumpbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eff5b82a51f1ecaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "104.28.40.135/32"
                ],
                "description": "SSH from local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Dev-jumpbox-sg",
            "name_prefix": "",
            "owner_id": "529088298985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jumpbox_sg"
            },
            "tags_all": {
              "Name": "jumpbox_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:subnet/subnet-04a6e9906211064e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a6e9906211064e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529088298985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev--Private-us-east-1a",
              "kubernetes.io/cluster/Dev-Bilarn": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Dev--Private-us-east-1a",
              "kubernetes.io/cluster/Dev-Bilarn": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:subnet/subnet-0c126c5dd56ee54a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c126c5dd56ee54a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529088298985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev--Private-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Dev--Private-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:subnet/subnet-0cf0e4f7ece93b40a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf0e4f7ece93b40a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088298985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev--Public-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned"
            },
            "tags_all": {
              "Name": "Dev--Public-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned"
            },
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:subnet/subnet-072b742265b0d5988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072b742265b0d5988",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088298985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev--Public-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned"
            },
            "tags_all": {
              "Name": "Dev--Public-us-east-1b",
              "kubernetes.io/cluster/Dev-Bilarn": "owned"
            },
            "vpc_id": "vpc-03656529b296b9a6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529088298985:vpc/vpc-03656529b296b9a6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b1d4b665f45079d",
            "default_route_table_id": "rtb-0d2b5e2506da634a3",
            "default_security_group_id": "sg-04c6adda5539613a7",
            "dhcp_options_id": "dopt-0901a982428aa6ada",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03656529b296b9a6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2b5e2506da634a3",
            "owner_id": "529088298985",
            "tags": {
              "Name": "Dev--main"
            },
            "tags_all": {
              "Name": "Dev--main"
            }
          }
        }
      ]
    }
  ]
}